--- a/PKMXEN.WpfClient/MainWindow.xaml
+++ b/PKMXEN.WpfClient/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PKMXEN.WpfClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Editor" Height="450" Width="800">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
@@ -14,7 +14,7 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Carriers}">
+        <ListBox ItemsSource="{Binding Carriers}" SelectedItem="{Binding SelectedCarrier}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Label Content="{Binding Name}"/>
@@ -22,9 +22,12 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Column="1">
+            <Label Content="Name" Background="LightBlue" Padding="10"/>
+            <TextBox Text="{Binding SelectedCarrier.Name}" Padding="10" Margin="0,0,0,30"/>
             <Button Content="Create Carrier" Command="{Binding CreateCarrierCommand}" Margin="10" Padding="10"/>
             <Button Content="Delete Carrier" Command="{Binding DeleteCarrierCommand}" Margin="10" Padding="10"/>
             <Button Content="Update Carrier" Command="{Binding UpdateCarrierCommand}" Margin="10" Padding="10"/>
+            <Label Content="{Binding ErrorMessage}" FontSize="18" Foreground="Red" HorizontalContentAlignment="Center" />
         </StackPanel>
     </Grid>
 </Window>
