--- a/PKMXEN.WpfClient/CarrierEditorWindow.xaml
+++ b/PKMXEN.WpfClient/CarrierEditorWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PKMXEN.WpfClient"
+        xmlns:vm="clr-namespace:PKMXEN.WpfClient.ViewModels"
         mc:Ignorable="d"
         Title="CarrierEditorWindow" Height="450" Width="800">
     <Window.DataContext>
-        <local:CarrierEditorWindowViewModel/>
+        <vm:CarrierEditorWindowViewModel/>
     </Window.DataContext>
     <Grid>
         <StackPanel x:Name="stack">
