--- a/PKMXEN.WpfClient/MainWindow.xaml
+++ b/PKMXEN.WpfClient/MainWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PKMXEN.WpfClient"
+        xmlns:vm="clr-namespace:PKMXEN.WpfClient.ViewModels"
         mc:Ignorable="d"
         Title="Editor" Height="450" Width="800">
     <Window.DataContext>
-        <local:MainWindowViewModel/>
+        <vm:MainWindowViewModel/>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
